--- a/views/fichas/new.ejs
+++ b/views/fichas/new.ejs
@@ -14,7 +14,7 @@
       </div>
       
       <div class="card-body">
-         <select id="maquinas" name="maquinas" class="form-control">
+         <select id="maquinasId" name="maquinasId" class="form-control">
             <option > Selecione uma máquina</option>
             <% maquinas.forEach((maquina) => { %>
                <option value='<%= maquina.id %>,<%= maquina.tipo.tipo %>'><%= maquina.descricao %> - <%= maquina.tipo.tipo %></option>
