--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -6,6 +6,49 @@
       <% }) %>
    </select>
    <br>
+
+   <table class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
+      <thead>
+         <tr>
+            <th>Número do Molde:</th>
+            <th>Número do Máquina:</th>
+            <th>Revisão:</th>
+            <th>Cliente:</th>
+            <th>Código PAM:</th>
+            <th>Técnico:</th>
+            <th>Produto:</th>
+            <th>Material:</th>
+         </tr>
+      </thead>
+      <tbody>
+         <tr>
+            <td>
+               <input style="width: 100%" id="molde" name="molde">
+            </td>
+            <td>
+               <input style="width: 100%" id="numMaquina" name="numMaquina">
+            </td>
+            <td>
+               <input style="width: 100%" id="revisao" name="revisao">
+            </td>
+            <td>
+               <input style="width: 100%" id="cliente" name="cliente">
+            </td>
+            <td>
+               <input style="width: 100%" id="codigoPAM" name="codigoPAM">
+            </td>
+            <td>
+               <input style="width: 100%" id="tecnico" name="tecnico">
+            </td>
+            <td>
+               <input style="width: 100%" id="produto" name="produto">
+            </td>
+            <td>
+               <input style="width: 100%" id="material" name="material">
+            </td>
+         </tr>
+      </tbody>
+   </table>
    
    <div class="d-flex justify-content-between">
       <!-- INJETORES -->
