--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -14,6 +14,12 @@
             <a class="nav-link <%=nav_maquinas%>" href="/maquinas" >Maquinas</a>
         </li>       
         <li class="navbar-item">
+            <a class="nav-link <%=nav_moldes%>" href="/moldes" >Moldes</a>
+        </li>       
+        <li class="navbar-item">
+            <a class="nav-link <%=nav_mp%>" href="/materiaprima" >Material</a>
+        </li>       
+        <li class="navbar-item">
             <a class="nav-link <%=nav_alertas%>" href="/alertas" >Alertas</a>
         </li>  
         <li class="navbar-item">
