--- a/views/materiaprima/edit.ejs
+++ b/views/materiaprima/edit.ejs
@@ -12,8 +12,8 @@
                     
             </div>
             <div class="card-body">
-                    <form  method="POST" action="/materiaprima/update">
-                            <input class="form-control" type="text" name="descricao" placeholder="Insira um nome Para a Máquina" value="<%= materiaprima.descricao %>"><br>
+                    <form name="materialForm" method="POST" action="/materiaprima/update" style="display: inline;" onsubmit="return validateForm()">
+                            <!-- <input class="form-control" type="text" name="descricao" placeholder="Insira um nome Para a Máquina" value="<%= materiaprima.descricao %>"><br> -->
                             <input class="form-control" type="text" name="codigo" placeholder="Insira um código Para a Máquina" value="<%= materiaprima.codigo %>"><br>
                       
                             <input type="hidden" name="id" value="<%= materiaprima.id %>">
@@ -22,7 +22,10 @@
                          
                             <br>
                             <button class="btn btn-primary">Editar</button>
-                        </form>
+                     </form>
+                     <form method="GET" action="/materiaprima" style="display: inline;">
+                        <button class="btn btn-danger">Cancelar</button>
+                     </form>
             </div>
            
           
@@ -30,4 +33,13 @@
    
 </div>
 
+<script>
+   function validateForm() {
+      var material = document.forms["materialForm"]["codigo"].value;
+      if (material === "") {
+         alert("O número do Material deve ser informado.");
+         return false;
+      }
+   }
+</script>
 <%- include ('../partials/footer.ejs') %>
