scripts para que funcao do enter seja para pular para o proximo input

--- a/views/fichas/new.ejs
+++ b/views/fichas/new.ejs
@@ -3,7 +3,7 @@
 
 <div class="container-fluid"> 
    <br>
-   <h2>Fichas Técnicas</h2> 
+   <h2>Adicionar Ficha Técnica</h2> 
    <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
    <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
    <hr>
@@ -36,4 +36,5 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src=/scripts/FichaTecnica.js></script>
+<script src=/scripts/documentScripts.js></script>
 <%- include ('../partials/footer.ejs') %>
