--- a/views/maquinas/new.ejs
+++ b/views/maquinas/new.ejs
@@ -16,7 +16,7 @@
                             <input class="form-control" type="text" name="mac" placeholder="Insira um ip Para a Máquina"><br>
                             <input class="form-control" type="text" name="codigo" placeholder="Insira um código Para a Máquina"><br>
                             <input class="form-control" type="text" name="peso" placeholder="Insira um peso em Toneladas Para a Máquina"><br>
-                            <input class="form-control" type="text" name="modelo" placeholder="Inseira o modelo da Máquia"><br>
+                            <input class="form-control" type="text" name="modelo" placeholder="Insira o modelo da Máquina"><br>
                             <label for="tipos">Escolha a Coleta especifica:  </label>
                             <select name="tipos" id="tipos">
                                 <% tipos.forEach(tipo => { %>
@@ -36,4 +36,6 @@
    
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/documentScripts.js></script>
 <%- include ('../partials/footer.ejs') %>
