--- a/views/alertas/new.ejs
+++ b/views/alertas/new.ejs
@@ -33,4 +33,6 @@
    
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/documentScripts.js></script>
 <%- include ('../partials/footer.ejs') %>
