--- a/views/users/create.ejs
+++ b/views/users/create.ejs
@@ -20,4 +20,6 @@
 
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/documentScripts.js></script>
 <%- include ('../partials/footer.ejs') %>
