--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -8,52 +8,60 @@
          <h2>Editar Máquina</h2>              
       </div>
          <div class="card-body">
-            <form method="POST" action="/fichas/updateHaitian" style="display: inline;">
+            <form name="pamForm" method="POST" action="/fichas/updateHaitian" style="display: inline;" onsubmit="return validateForm()">
                <input type="hidden" name="id" value="<%= injetor.id %>">
                <input type="hidden" name="maquina" value="<%= injetor.maq %>">
 
-               <table class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
-                  <thead>
-                     <tr>
-                        <th>Número do Molde:</th>
-                        <th>Número do Máquina:</th>
-                        <th>Revisão:</th>
-                        <th>Cliente:</th>
-                        <th>Código PAM:</th>
-                        <th>Técnico:</th>
-                        <th>Produto:</th>
-                        <th>Material:</th>
-                     </tr>
-                  </thead>
-                  <tbody>
-                     <tr>
-                        <td>
-                           <input style="width: 100%" id="molde" name="molde" value="<%= injetor.NúmeroMolde %>">
-                        </td>
-                        <td>
-                           <input style="width: 100%" id="numMaquina" name="numMaquina" value="<%= injetor.NúmeroMáquina %>">
-                        </td>
-                        <td>
-                           <input style="width: 100%" id="revisao" name="revisao" value="<%= injetor.Revisao %>">
-                        </td>
-                        <td>
-                           <input style="width: 100%" id="cliente" name="cliente" value="<%= injetor.Cliente %>">
-                        </td>
-                        <td>
-                           <input style="width: 100%" id="codigoPAM" name="codigoPAM" value="<%= injetor.CodigoPAM %>">
-                        </td>
-                        <td>
-                           <input style="width: 100%" id="tecnico" name="tecnico" value="<%= injetor.Tecnico %>">
-                        </td>
-                        <td>
-                           <input style="width: 100%" id="produto" name="produto" value="<%= injetor.Produto %>">
-                        </td>
-                        <td>
-                           <input style="width: 100%" id="material" name="material" value="<%= injetor.Material %>">
-                        </td>
-                     </tr>
-                  </tbody>
-               </table>
+               <div class="table-ficha">
+                  <table class="table-bordered table-responsive" style="width: 100%; margin-bottom: 40px;">
+                     <thead>
+                        <tr>
+                           <th><span style="color: red;">*</span>Número do Molde:</th>
+                           <th>Número da Máquina:</th>
+                           <th>Cliente:</th>
+                           <th>Código PAM:</th>
+                           <th>Técnico:</th>
+                           <th>Produto:</th>
+                           <th><span style="color: red;">*</span>Número do Material:</th>
+                        </tr>
+                     </thead>
+                     <tbody>
+                        <tr>
+                           <td>
+                              <input style="width: 100%" id="molde" name="molde" list="moldeList" value="<%= injetor.NúmeroMolde %>">
+                              <datalist id="moldeList">
+                                 <% moldes.forEach((molde) => { %>
+                                    <option value="<%= molde.codigo %>"></option>
+                                 <% }) %>
+                              </datalist>  
+                           </td>
+                           <td>
+                              <input style="width: 100%" id="numMaquina" name="numMaquina" value="<%= injetor.NúmeroMáquina %>">
+                           </td>
+                           <td>
+                              <input style="width: 100%" id="cliente" name="cliente" value="<%= injetor.Cliente %>">
+                           </td>
+                           <td>
+                              <input style="width: 100%" id="codigoPAM" name="codigoPAM" value="<%= injetor.CodigoPAM %>">
+                           </td>
+                           <td>
+                              <input style="width: 100%" id="tecnico" name="tecnico" value="<%= injetor.Tecnico %>">
+                           </td>
+                           <td>
+                              <input style="width: 100%" id="produto" name="produto" value="<%= injetor.Produto %>">
+                           </td>
+                           <td>
+                              <input style="width: 100%" id="material" name="material" list="materialList" value="<%= injetor.Material %>">
+                              <datalist id="materialList">
+                                 <% materiais.forEach((material) => { %>
+                                    <option value="<%= material.codigo %>"></option>
+                                 <% }) %>
+                              </datalist>
+                           </td>
+                        </tr>
+                     </tbody>
+                  </table>
+               </div>
 
                <div class="d-flex justify-content-between">
                   <!-- INJETORES -->
@@ -2142,5 +2150,22 @@
    </div>
    <br>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src=/scripts/documentScripts.js></script>
+<script>
+   function validateForm() {
+      var molde = document.forms["pamForm"]["molde"].value;
+      var material = document.forms["pamForm"]["material"].value;
+      if (molde === "") {
+         alert("O número do Molde deve ser informado.");
+         return false;
+      }
+      if (material === "") {
+         alert("O número do Material deve ser informado.");
+         return false;
+      }
+   }
+</script>
 
 <%- include ('../partials/footer.ejs') %>
