adicionado seta para voltar em páginas específicas

--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -3,6 +3,13 @@
 
 <div class="container-fluid">
    <br>
+   <form method="GET" action="/ficha/lista" style="display: inline;">
+      <button class="btn btn-info" style="width: 70px;">
+         <i class="fa fa-arrow-left" title="Voltar"></i>
+      </button>
+   </form>
+   <br>
+   <br>
    <div class="card">
       <div class="card-header">                
          <h2>Editar Máquina</h2>              
