--- a/views/fichas/editHaitian.ejs
+++ b/views/fichas/editHaitian.ejs
@@ -29,7 +29,7 @@
                            <th>Código PAM:</th>
                            <th>Técnico:</th>
                            <th>Produto:</th>
-                           <th><span style="color: red;">*</span>Número do Material:</th>
+                           <th><span style="color: red;">*</span>Material:</th>
                         </tr>
                      </thead>
                      <tbody>
