--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -49,7 +49,7 @@
                         <input class="read-only" readonly style="width: 100%" id="produto" name="produto" value="<%= injetor.Produto %>">
                      </td>
                      <td>
-                        <input class="read-only" readonly style="width: 100%" id="material" name="material" value="<%= injetor.Material %>">
+                        <p id="descMaterial"><%= injetor.Material %></p>
                      </td>
                      <td>
                         <input class="read-only" readonly style="width: 100%" id="material" name="material" value="<%= injetor.revisao %>">
