--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,12 @@
     transition: all 0.3s;
 }
 
+#headerFicha > thead > tr > th {
+   border: 1px solid #999;
+   padding: 0.2rem;
+   text-align: center;
+}
+
 .table-ficha .table-bordered {
    border: 1px solid #999;
 }
@@ -59,6 +65,11 @@
    border: 1px solid #999;
    padding: 0.3rem;
    border-left: none;
+}
+
+#descMaterial {
+   text-align: center;
+   font-style: italic;
 }
 
 input.read-only {
