--- a/views/fichas/newFichaHaitian.ejs
+++ b/views/fichas/newFichaHaitian.ejs
@@ -17,7 +17,7 @@
                <th>Código PAM:</th>
                <th>Técnico:</th>
                <th>Produto:</th>
-               <th><span style="color: red;">*</span>Número do Material:</th>
+               <th><span style="color: red;">*</span>Material:</th>
             </tr>
          </thead>
          <tbody>
