--- a/views/fichas/index.ejs
+++ b/views/fichas/index.ejs
@@ -3,14 +3,15 @@
 
 <div class="container-fluid"> 
 
-   <hr>
-   <h2>Fichas Técnicas</h2> 
+   <br>
+   <h2>Ficha Técnica - Parâmetros Reais</h2> 
    <div>
       <a class="btn btn-success" href="/novaficha"> Inserir Nova Ficha Técnica</a>
       <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
    </div>
    <hr>   
    
+   <h5>Selecione uma máquina: </h5>
    <input type="hidden" name="dsMaquina"  id="dsMaquina" value="<%= dsMaquina %>">
 
    <select name="maquinas" id="maquinas"  class="form-control">
@@ -52,7 +53,7 @@
       </tbody>
    </table> -->
     
-   <h5>Parâmetros De Programa : </h5>
+   <h5>Parâmetros De Programa: </h5>
    <br>
    <table class="table table-bordered" id="parametros"> 
       <thead>
