--- a/views/revisao/visualizationHaitian.ejs
+++ b/views/revisao/visualizationHaitian.ejs
@@ -8,6 +8,14 @@
    <a class="btn btn-success" href="/ficha/lista"> Lista de Fichas Técnicas</a>
    <hr>
 
+   <form method="GET" action="/ficha/lista" style="display: inline;">
+      <button class="btn btn-info" style="width: 70px;">
+         <i class="fa fa-arrow-left" title="Voltar"></i>
+      </button>
+   </form>
+   <br>
+   <br>
+   
    <div class="card">
       <div class="card-header">                
          <h2>Revisão Id <%= injetor.revisao %></h2>              
